// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputItem - Demo Basic 1`] = `
<div class="n22-example-child n22-example-child-input-item-0">
  <fieldset class="n22-field">
    <!---->
    <div class="n22-field-content">
      <div class="n22-field-item n22-input-item is-browser is-amount left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>普通文本</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="普通文本" maxlength="5" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser is-active is-disabled left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>禁用表单</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="" disabled="disabled" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser is-active left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>只读表单</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="" readonly="readonly" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser is-highlight left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>高亮表单</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="高亮表单" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser center normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>文本居中</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="文本居中" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser right normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>文本居右</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="文本居右" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`InputItem - Demo Business scenario input 1`] = `
<div class="n22-example-child n22-example-child-input-item-2">
  <fieldset class="n22-field">
    <!---->
    <div class="n22-field-content">
      <div class="n22-field-item n22-input-item is-browser left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>银行卡</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="bankCard xxxx xxxx xxxx xxxx" maxlength="" autocomplete="off" data-vv-as="" type="tel" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser is-active left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>手机号</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="phone xxx xxxx xxxx" maxlength="" autocomplete="off" data-vv-as="" type="tel" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>金额</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="money xx, xxx.xxxx" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser is-active left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>数字</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="digit 0123456789" maxlength="" autocomplete="off" data-vv-as="" type="tel" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>密码</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="password *********" maxlength="" autocomplete="off" data-vv-as="" type="password" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>邮箱</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="其他标准 html input 类型" maxlength="" autocomplete="off" data-vv-as="" type="email" value="" class="n22-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`InputItem - Demo Floating title input 1`] = `
<div class="n22-example-child n22-example-child-input-item-1">
  <fieldset class="n22-field">
    <!---->
    <div class="n22-field-content">
      <div class="n22-field-item n22-input-item is-browser is-title-latent is-clear left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>真实姓名</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="投保人姓名" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <div class="n22-field-item-right">
            <div class="n22-input-item-clear" style="display:none;">
              <div class="svg_icon">
                <svg-icon icon-class="clear"></svg-icon>
              </div>
            </div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser is-title-latent is-clear left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>身份证号</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="投保人身份证号" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <div class="n22-field-item-right">
            <div class="n22-input-item-clear" style="display:none;">
              <div class="svg_icon">
                <svg-icon icon-class="clear"></svg-icon>
              </div>
            </div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`InputItem - Demo Large size financial input 1`] = `
<div class="n22-example-child n22-example-child-input-item-3">
  <fieldset class="n22-field">
    <header class="n22-field-header n22-field-header-bottom">
      <div class="n22-field-heading">
        <legend class="n22-field-title">转出金额(元)</legend>
        <!---->
      </div>
      <div class="n22-field-action">
        <div class="field-operator"><i class="n22-icon icon-font n22-icon-info info md" style="color:;"></i></div>
      </div>
    </header>
    <div class="n22-field-content">
      <div class="n22-field-item n22-input-item is-browser is-highlight with-brief is-amount left large">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!---->
          <!---->
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="最多30万元" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <div class="n22-field-item-right">
            <!---->
            <div class="input-operator">全部取出</div>
            <!---->
          </div>
        </div>
        <div class="n22-field-item-children" style="text-align:right;">
          <!---->
          <div class="n22-input-item-brief">
            <p>理财提示文案，字符超出10个自动变小</p>
          </div>
          <!---->
        </div>
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`InputItem - Demo input with controls 1`] = `
<div class="n22-example-child n22-example-child-input-item-4">
  <fieldset class="n22-field">
    <!---->
    <div class="n22-field-content">
      <div class="n22-field-item n22-input-item is-browser is-clear left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>清空按钮</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="normal text" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <div class="n22-field-item-right">
            <div class="n22-input-item-clear" style="display:none;">
              <div class="svg_icon">
                <svg-icon icon-class="clear"></svg-icon>
              </div>
            </div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div class="n22-field-item n22-input-item is-browser is-clear left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>金融键盘</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control">
            <div class="n22-input-item-fake"><span></span> <span class="n22-input-item-fake-placeholder">financial number keyboard</span></div>
          </div>
          <div class="n22-field-item-right">
            <div class="n22-input-item-clear" style="display:none;">
              <div class="svg_icon">
                <svg-icon icon-class="clear"></svg-icon>
              </div>
            </div>
            <!---->
          </div>
        </div>
        <div class="n22-field-item-children" style="text-align:right;">
          <!---->
          <!---->
          <n22-number-keyboard id="-number-keyboard" class="n22-input-item-number-keyboard"></n22-number-keyboard>
        </div>
      </div>
      <div class="n22-field-item n22-input-item is-browser left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!---->
          <!---->
          <div class="n22-field-item-left"><svg class="n22-icon icon-svg n22-icon-bank-zs md" style="fill:;">
              <use xlink:href="#bank-zs"></use>
            </svg></div>
          <div class="n22-field-item-control"> <input name="" placeholder="left/right slots" maxlength="" autocomplete="off" data-vv-as="" type="text" value="" class="n22-input-item-input"> </div>
          <div class="n22-field-item-right">
            <!----> <i class="n22-icon icon-font n22-icon-info info md" style="color:;"></i>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`InputItem - Demo input with error message 1`] = `
<div class="n22-example-child n22-example-child-input-item-5">
  <fieldset class="n22-field">
    <!---->
    <div class="n22-field-content">
      <div class="n22-field-item n22-input-item is-browser is-active is-error is-clear left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>手机号码</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="" maxlength="" autocomplete="off" data-vv-as="" type="tel" value="" class="n22-input-item-input"> </div>
          <div class="n22-field-item-right">
            <div class="n22-input-item-clear" style="display:none;">
              <div class="svg_icon">
                <svg-icon icon-class="clear"></svg-icon>
              </div>
            </div>
            <!---->
          </div>
        </div>
        <div class="n22-field-item-children" style="text-align:right;">
          <div class="n22-input-item-msg">
            <p>手机号码无效</p>
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <div class="n22-field-item n22-input-item is-browser is-clear left normal">
        <div class="n22-field-item-content n22-field-item-content-line">
          <!----> <label class="n22-field-item-title"><span>储蓄卡号</span>
            <!---->
            <!----></label>
          <!---->
          <div class="n22-field-item-control"> <input name="" placeholder="" maxlength="" autocomplete="off" data-vv-as="" type="tel" value="" class="n22-input-item-input"> </div>
          <div class="n22-field-item-right">
            <div class="n22-input-item-clear" style="display:none;">
              <div class="svg_icon">
                <svg-icon icon-class="clear"></svg-icon>
              </div>
            </div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;
